markdown rendering base directory bug.